src/app/core/header-menu/header-menu.component.scss
@use '../../../styles/variables';

.g-brand {
  background: white;
  box-shadow: 0 2px 4px rgba(0, 0, 0, 0.05);
  color: #1a237e;

  .header-menu-logo {
    color: #1a237e;
  }

  ::ng-deep {
    .mat-icon {
      color: #1a237e;
    }
    .mat-mdc-icon-button {
      color: #1a237e;
    }
  }
}

.header-height {
  height: 55px;
}

.header-menu-logo {
    font-family: "Plus Jakarta Sans", sans-serif;
    font-optical-sizing: auto;
    font-weight: 800;
    font-style: normal;
    font-size: 20px;
    letter-spacing: -0.01em;
    line-height: 96px;
    cursor: pointer;
  }

.google-user-icon {
  position: absolute;
  top: 50%;
  height: 48px;
  left: 50%;
  width: 48px;
  transform: translate(-50%, -50%);
  display: var(--mat-icon-button-touch-target-display);
}

.round {
  border-radius: 50%;
}

.header-website-url {
  font-size: 10px;
  position: absolute;
  top: 1px;
}

